Added left right section elements

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/fibel-nord" type="text/css"/>
     <title>Sign-up form</title>
 </head>
 <body>
-    
+
+    <div class="left-side">
+        <div class="container">
+            <img src="assets/logo-img.png" alt="logo image" width="80" height="107">
+            <p>sign-up form</p>
+        </div>
+        <p class="bottom">Photo by <a href="https://unsplash.com/@crease1">Christopher Osten</a> on <a href="https://unsplash.com/">Unsplash</a></p>
+    </div>
+
+    <div class="right-side">
+        
+    </div>
 
     <script src="script.js"></script>
 </body>
