--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </form>
         </div>
         <div class="submit-section">
-            <button id="submitButton" type="submit">Create Account</button>
+            <button id="submitButton" type="submit" form="inputForm">Create Account</button>
             <p>Already have an account? <a href="#">Log in</a></p>
         </div>
     </div>
